<resources>
    <string name="actions">Actions</string>
    <string name="app_name">Template Printer</string>
    <string name="file_browser_not_found">File browser not found</string>
    <string name="no_data">No data!</string>
    <string name="no_file_selected">No file selected</string>
    <string name="no_folder_selected">No folder selected</string>
    <string name="none">None</string>
    <string name="not_a_folder">Not a folder!</string>
    <string name="not_supported_file_format">Not a supported file format</string>
    <string name="ok">OK</string>
    <string name="output_folder">Output Folder</string>
    <string name="populate_and_print">POPULATE &amp; PRINT</string>
    <string name="select">SELECT</string>
    <string name="settings">Settings</string>
    <string name="template_does_not_exist">Template file does not exist</string>
    <string name="template_file">Template File</string>
    <string name="unable_to_create_output_folder">Unable to create output folder</string>
</resources>
